# kiara

./: .editorconfig  .envrc.disabled  .gitattributes  .gitignore  .gitlab-ci.yml  .kiara_complete.zsh  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  onboarding.folder_to_table.json  pyproject.toml  q  requirements.txt  setup.cfg  setup.py  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-darwin.yaml  build-darwin.yaml.bak  build-linux.yaml  build-windows.yaml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/architecture/: index.html
0.1.0/install/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/architecture/: index.html
0.1.1/install/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/architecture/: index.html
0.1.2/install/: index.html
0.1.2/search/: search_index.json
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/architecture/: index.html
0.1.3/install/: index.html
0.1.3/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/architecture/: index.html
0.2.0/install/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/architecture/: index.html
0.2.1/install/: index.html
0.2.1/search/: search_index.json
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/architecture/: index.html
0.2.2/install/: index.html
0.2.2/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/architecture/: index.html
0.3.0/install/: index.html
0.3.0/search/: search_index.json
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/architecture/: index.html
0.3.1/install/: index.html
0.3.1/search/: search_index.json
0.3.2/: 404.html  index.html  sitemap.xml
0.3.2/architecture/: index.html
0.3.2/install/: index.html
0.3.2/search/: search_index.json
0.3.3/: 404.html  index.html  sitemap.xml
0.3.3/architecture/: index.html
0.3.3/install/: index.html
0.3.3/search/: search_index.json
0.3.4/: 404.html  index.html  sitemap.xml
0.3.4/architecture/: index.html
0.3.4/install/: index.html
0.3.4/modules/: index.html
0.3.4/operation_types/: index.html
0.3.4/search/: search_index.json
0.3.4/value_types/: index.html
0.3.5/: 404.html  index.html  objects.inv  sitemap.xml
0.3.5/architecture/: index.html
0.3.5/included_components/: index.html
0.3.5/install/: index.html
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/architecture/: index.html
0.4.0/included_components/: index.html
0.4.0/install/: index.html
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/architecture/: index.html
0.4.1/included_components/: index.html
0.4.1/install/: index.html
0.4.10/: 404.html  index.html  sitemap.xml
0.4.10/SUMMARY/: index.html
0.4.10/architecture/: index.html
0.4.10/included_components/: index.html
0.4.10/install/: index.html
0.4.11/: 404.html  index.html  objects.inv  sitemap.xml
0.4.11/SUMMARY/: index.html
0.4.11/architecture/: index.html
0.4.11/install/: index.html
0.4.12/: 404.html  index.html  sitemap.xml
0.4.13/: 404.html  index.html  sitemap.xml
0.4.14/: 404.html  index.html  sitemap.xml
0.4.15/: 404.html  index.html  sitemap.xml
0.4.16/: 404.html  index.html  objects.inv  sitemap.xml
0.4.17/: 404.html  index.html  objects.inv  sitemap.xml
0.4.18/: 404.html  index.html  sitemap.xml
0.4.19/: 404.html  index.html  sitemap.xml
0.4.2/: 404.html  index.html  sitemap.xml
0.4.20/: 404.html  index.html  sitemap.xml
0.4.21/: 404.html  index.html  sitemap.xml
0.4.22/: 404.html  index.html  objects.inv  sitemap.xml
0.4.23/: 404.html  index.html  objects.inv  sitemap.xml
0.4.24/: 404.html  index.html  objects.inv  sitemap.xml
0.4.25/: 404.html  index.html  objects.inv  sitemap.xml
0.4.26/: 404.html  index.html  objects.inv  sitemap.xml
0.4.27/: 404.html  index.html  objects.inv  sitemap.xml
0.4.28/: 404.html  index.html  objects.inv  sitemap.xml
0.4.29/: 404.html  index.html  sitemap.xml
0.4.3/: 404.html  index.html  sitemap.xml
0.4.30/: 404.html  index.html  sitemap.xml
0.4.31/: 404.html  index.html  objects.inv  sitemap.xml
0.4.32/: 404.html  index.html  sitemap.xml
0.4.33/: 404.html  index.html  sitemap.xml
0.4.34/: 404.html  index.html  objects.inv  sitemap.xml
0.4.35/: 404.html  index.html  sitemap.xml
0.4.37/: 404.html  index.html  sitemap.xml
0.4.38/: 404.html  index.html  sitemap.xml
0.4.39/: 404.html  index.html  sitemap.xml
0.4.4/: 404.html  index.html  sitemap.xml
0.4.40/: 404.html  index.html  sitemap.xml
0.4.41/: 404.html  index.html  objects.inv  sitemap.xml
0.4.42/: 404.html  index.html  objects.inv  sitemap.xml
0.4.43/: 404.html  index.html  sitemap.xml
0.4.44/: 404.html  index.html  sitemap.xml
0.4.45/: 404.html  index.html  objects.inv  sitemap.xml
0.4.46/: 404.html  index.html  sitemap.xml
0.4.47/: 404.html  index.html  sitemap.xml
0.4.48/: 404.html  index.html  sitemap.xml
0.4.49/: 404.html  index.html  objects.inv  sitemap.xml
0.4.5/: 404.html  index.html  objects.inv  sitemap.xml
0.4.6/: 404.html  index.html  objects.inv  sitemap.xml
0.4.7/: 404.html  index.html  objects.inv  sitemap.xml
0.4.8/: 404.html  index.html  objects.inv  sitemap.xml
0.4.9/: 404.html  index.html  sitemap.xml
dev/: dev.ipynb  script.py
docs/: SUMMARY.md  included.md  install.md  usage.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
stable/: 404.html  index.html
tests/: conftest.py  test_info.py  test_kiara_context.py  test_misc.py  test_module_instances.py  test_module_types.py  test_modules.py  test_operations.py  test_pipeline_creation.py  test_pipelines.py  test_rendering.py  test_workflow_creation.py  utils.py
v0.5.19/: 404.html  index.html  sitemap.xml
v0.5.20/: sitemap.xml
v0.5.21/: sitemap.xml
v0.5.23/: 404.html
v0.5.24rc1/: sitemap.xml
v0.5.25/: objects.inv
(+13107 files in other folders)
