[build-system]
requires = [
    "setuptools>=63",
    "setuptools_scm[toml]>7.0.0",
    "wheel",
]
build-backend = 'setuptools.build_meta'

[project]
name = "kiara"
description = "Data-centric workflow orchestration."
authors = [
    {name = "Markus Binsteiner", email = "markus@frkl.io"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["kiara"]
license = {text = "MPL-2.0"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "alembic>=1.7.0",
    "appdirs>=1.4.4,<2.0.0",
    "bidict>=0.21.0",
    "boltons>=21.0.0",
    "click>=7.0.0",
    "dag-cbor>=0.2.2",
    "deepdiff>=6.0.0,<7.0.0",
    "distro>=1.6.0",
    "dpath>=2.0.0",
    "filetype>=1.0.0,<2.0.0",
    "humanfriendly>=10.0",
    "importlib-metadata>=3.0.0.0,<5.0.0",
    "jinja2>=3.0.1",
    "mistune>=2.0.3,<3",
    "mmhash3>=3.0.1",
    "multiformats>=0.1.4.post2",
    "networkx>=2.5,<3.0",
    "orjson>=3.6.0",
    "pp-ez>=0.2.0",
    "pydantic[email]>=1.10.0",
    "pytz>=2022.6",
    "regex>=2022.4.0",
    "rich>=12.4.0",
    "rich-click>=1.0.0",
    "ruamel.yaml>=0.17.0,<0.18.0",
    "sortedcontainers>=2.4.0",
    "stevedore>=4.0.0,<5.0.0",
    "structlog>=21.5.0",
    "textual>=0.10.0,<0.11.0",
    "tzlocal>=2.1,<5.0",
]
dynamic = ["version"]

[project.optional-dependencies]
all_plugins = [
    "kiara_plugin.network_analysis",
    "kiara_plugin.language_processing",
    "kiara_plugin.onboarding"
]

dev_documentation = [
    "icecream>=2.1.0",
    "jupyter",
    "mike>=1.0.1",
    "mkdocs-awesome-pages-plugin>=2.5.0",
    "mkdocs-literate-nav>=0.4.0",
    "mkdocs-macros-plugin>=0.5.0,<0.6.0",
    "mkdocs-material>=8.0.0",
    "mkdocs-section-index>0.3.0",
    "mkdocstrings[python]>=0.18",
    "mkdocs-gen-files>=0.3.1;python_version>='3.7'"
]

dev_testing = [
    "coveralls>=3.2.0",
    "flake8>=3.8.4",
    "jsonschema>=4.0.0",
    "mypy>=0.800",
    "pytest>=6.2.2",
    "pytest-cov>=2.11.1",
    "pytest-html>=3.1.0",
    "tox>=3.21.2",
    "types-Deprecated",
    "types-PyYAML",
    "types-pkg-resources",
    "types-python-dateutil",
    "types-pytz",
    "types-tzlocal",
    "types-orjson"
]

dev_utils = [
    "kiara_plugin.core_types",
    "kiara_plugin.tabular",
    "build",
    "flake8>=3.8.4",
    "ipython",
    "mypy>=0.800",
    "pip-licenses>=3.3.0",
    "pre-commit>=2.9.3",
    "pytest>=6.2.2",
    "setup-cfg-fmt>=1.16.0",
    "types-Deprecated",
    "types-PyYAML",
    "types-pkg-resources",
    "types-python-dateutil",
    "types-pytz",
    "types-tzlocal",
    "types-orjson",
    "watchgod>=0.6",
    "wheel"
]

doc = [
    "airium>=0.2.5",
    "black>=22.3.0",
    "jupytext>=1.14.0",
    "mkdocstrings>=0.18.0"
]

jupyter = [
    "jupyterlab",
    "pygraphviz",
    "ipydagred3"
]

[project.urls]
homepage = "https://github.com/DHARPA-Project/kiara"
documentation = "https://dharpa.org/kiara.documentation"
repository = "https://github.com/DHARPA-Project/kiara"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | external
)/
'''

[tool.setuptools_scm]
write_to = "src/kiara/version.txt"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
