[build-system]
requires = [
    "hatchling>=1.18.0",
    "hatch-vcs>=0.3.0",
]
build-backend = "hatchling.build"

[project]
name = "kiara"
description = "Data-centric workflow orchestration."
authors = [
    { name = "Markus Binsteiner", email = "markus@frkl.io" }
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["kiara"]
license = { text = "MPL-2.0" }
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]


dependencies = [
    "appdirs>=1.4.4,<2.0.0",
    "bidict>=0.21.0",
    "boltons>=21.0.0",
    "click>=8.1.0",
    "copier>=9.7.0,<10.0.0",
    "dag-cbor>=0.3.3,<0.4.0",
    "deepdiff>=8.5.0,<9.0.0",
    "distro>=1.6.0",
    "dpath>=2.0.0",
    "docstring_parser>=0.15.0",
    "email-validator>=2.1.0.post1",
    "fasteners>=0.18",
    "filetype>=1.0.0,<2.0.0",
    "httpx>=0.23.0",
    "humanfriendly>=10.0",
    "importlib-metadata>=3.0.0.0",
    "jinja2>=3.0.1",
    "lz4>=4.3.0",
    "patool>=1.12",
    "pip>=25.0.0",
    "mistune>=3.0.0",
    "mmh3>=3.5.1",
    "multiformats>=0.3.1,<0.4.0",
    "multiformats-config>=0.3.1,<0.4.0",
    "networkx>=3.0,<4.0",
    "orjson>=3.8.10",
    "pp-ez>=0.2.0",
    "puremagic>=1.15",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "pytz>=2022.6",
    "pyzmq>=25.0.0",
    "regex>=2022.4.0",
    "rich>=14.0.0",
    "rich-click>=1.8.9",
    "ruamel.yaml>=0.18.0,<0.19.0",
    "sortedcontainers>=2.4.0",
    "SQLAlchemy>=2.0.20",
    "stevedore>=5.0.0,<6.0.0",
    "structlog>=21.5.0",
    "typing-extensions>=4.12.0",
    "typing-validation>=1.2.11",
    "tzlocal>=2.1,<6.0",
    "zstandard>=0.22.0",
    "airium>=0.2.7",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "kiara[dev_utils]",
]

notebooks = [
    "kiara[jupyter,marimo]",
]

[project.scripts]
kiara = "kiara.interfaces.cli:cli"

[project.entry-points."kiara.archive_type"]

filesystem_data_archive = "kiara.registries.data.data_store.filesystem_store:FileSystemDataArchive"
filesystem_data_store = "kiara.registries.data.data_store.filesystem_store:FilesystemDataStore"
filesystem_job_archive = "kiara.registries.jobs.job_store.filesystem_store:FileSystemJobArchive"
filesystem_job_store = "kiara.registries.jobs.job_store.filesystem_store:FileSystemJobStore"
filesystem_alias_archive = "kiara.registries.aliases.archives:FileSystemAliasArchive"
filesystem_alias_store = "kiara.registries.aliases.archives:FileSystemAliasStore"
filesystem_workflow_archive = "kiara.registries.workflows.archives:FileSystemWorkflowArchive"
filesystem_workflow_store = "kiara.registries.workflows.archives:FileSystemWorkflowStore"
sqlite_data_archive = "kiara.registries.data.data_store.sqlite_store:SqliteDataArchive"
sqlite_data_store = "kiara.registries.data.data_store.sqlite_store:SqliteDataStore"
sqlite_metadata_archive = "kiara.registries.metadata.metadata_store.sqlite_store:SqliteMetadataArchive"
sqlite_metadata_store = "kiara.registries.metadata.metadata_store.sqlite_store:SqliteMetadataStore"
sqlite_alias_archive = "kiara.registries.aliases.sqlite_store:SqliteAliasArchive"
sqlite_alias_store = "kiara.registries.aliases.sqlite_store:SqliteAliasStore"
sqlite_job_archive = "kiara.registries.jobs.job_store.sqlite_store:SqliteJobArchive"
sqlite_job_store = "kiara.registries.jobs.job_store.sqlite_store:SqliteJobStore"
sqlite_workflow_archive = "kiara.registries.workflows.sqlite_store:SqliteWorkflowArchive"
sqlite_workflow_store = "kiara.registries.workflows.sqlite_store:SqliteWorkflowStore"

[project.entry-points."kiara.cli_subcommands"]

run = "kiara.interfaces.cli.run:run"
info = "kiara.interfaces.cli.info.commands:info"
context = "kiara.interfaces.cli.context.commands:context"
archive = "kiara.interfaces.cli.archive.commands:archive"
data = "kiara.interfaces.cli.data.commands:data"
module = "kiara.interfaces.cli.module.commands:module"
operation = "kiara.interfaces.cli.operation.commands:operation"
pipeline = "kiara.interfaces.cli.pipeline.commands:pipeline"
data-type = "kiara.interfaces.cli.type.commands:type_group"
#workflow = "kiara.interfaces.cli.workflow.commands:workflow"
render = "kiara.interfaces.cli.render.commands:render"
plugin = "kiara.interfaces.cli.plugin.commands:plugin_group"

[project.entry-points."kiara.data_types"]

none = "kiara.data_types.included_core_types:NoneType"
any = "kiara.data_types.included_core_types:AnyType"
bytes = "kiara.data_types.included_core_types:BytesType"
string = "kiara.data_types.included_core_types:StringType"
boolean = "kiara.data_types.included_core_types:BooleanType"
dict = "kiara.data_types.included_core_types:DictValueType"
terminal_renderable = "kiara.data_types.included_core_types.internal:TerminalRenderable"
doc = "kiara.data_types.included_core_types.internal:DocumentationModelValueType"
file = "kiara.data_types.included_core_types.filesystem:FileValueType"
file_bundle = "kiara.data_types.included_core_types.filesystem:FileBundleValueType"
internal = "kiara.data_types.included_core_types.internal:InternalType"
internal_model = "kiara.data_types.included_core_types.internal:InternalModelValueType"
python_object = "kiara.data_types.included_core_types.serialization:PythonObjectType"
render_scene = "kiara.data_types.included_core_types.internal.render_value:RenderSceneDataType"
render_value_result = "kiara.data_types.included_core_types.internal.render_value:RenderValueResultDataType"

[project.entry-points."kiara.metadata_models"]

python_class = "kiara.models.values.value_metadata.included_metadata_types:PythonClassMetadata"
file = "kiara.models.values.value_metadata.included_metadata_types:FileMetadata"
file_bundle = "kiara.models.values.value_metadata.included_metadata_types:FileBundleMetadata"

[project.entry-points."kiara.model_classes"]

default = "kiara:find_model_classes"
python_api = "kiara:find_model_classes_api"

[project.entry-points."kiara.modules"]

"pipeline" = "kiara.modules.included_core_modules.pipeline:PipelineModule"
"unpickle.value" = "kiara.modules.included_core_modules.serialization:UnpickleModule"
"load.bytes" = "kiara.modules.included_core_modules.serialization:LoadBytesModule"
"load.string" = "kiara.modules.included_core_modules.serialization:LoadStringModule"
"load.internal_model" = "kiara.modules.included_core_modules.serialization:LoadInternalModel"
"deserialize.from_json" = "kiara.modules.included_core_modules.serialization:DeserializeFromJsonModule"
"value.extract_metadata" = "kiara.modules.included_core_modules.metadata:ExtractMetadataModule"
"pretty_print.value" = "kiara.modules.included_core_modules.pretty_print:ValueTypePrettyPrintModule"
"pretty_print.any.value" = "kiara.modules.included_core_modules.pretty_print:PrettyPrintAnyValueModule"
"import.local.file" = "kiara.modules.included_core_modules.filesystem:ImportLocalFileModule"
"import.local.file_bundle" = "kiara.modules.included_core_modules.filesystem:ImportLocalFileBundleModule"
"create.file.from.bytes" = "kiara.modules.included_core_modules.filesystem:CreateFileFromBytesModule"
"deserialize.file" = "kiara.modules.included_core_modules.filesystem:DeserializeFileModule"
"deserialize.file_bundle" = "kiara.modules.included_core_modules.filesystem:DeserializeFileBundleModule"
"file_bundle.pick.file" = "kiara.modules.included_core_modules.filesystem:PickFileFromFileBundleModule"
"file_bundle.pick.sub_folder" = "kiara.modules.included_core_modules.filesystem:PickSubBundle"
"export.file" = "kiara.modules.included_core_modules.filesystem:ExportFileModule"
"render.value" = "kiara.modules.included_core_modules.render_value:ValueTypeRenderModule"
"mock" = "kiara.modules.included_core_modules.mock:MockKiaraModule"

[project.entry-points."kiara.operation_types"]

custom_module = "kiara.operations.included_core_operations:CustomModuleOperationType"
pipeline = "kiara.operations.included_core_operations.pipeline:PipelineOperationType"
deserialize = "kiara.operations.included_core_operations.serialize:DeSerializeOperationType"
extract_metadata = "kiara.operations.included_core_operations.metadata:ExtractMetadataOperationType"
pretty_print = "kiara.operations.included_core_operations.pretty_print:PrettyPrintOperationType"
create_from = "kiara.operations.included_core_operations.create_from:CreateFromOperationType"
import_data = "kiara.operations.included_core_operations.import_data:ImportDataOperationType"
export_as = "kiara.operations.included_core_operations.export_as:ExportAsOperationType"
render_value = "kiara.operations.included_core_operations.render_value:RenderValueOperationType"
#render_data = "kiara.operations.included_core_operations.render_data:RenderDataOperationType"
filter = "kiara.operations.included_core_operations.filter:FilterOperationType"

[project.entry-points."kiara.renderers"]

default = "kiara:find_renderer_classes"

[project.entry-points."mkdocs.plugins"]

"frkl-docgen" = "kiara.doc:FrklDocumentationPlugin"


[project.optional-dependencies]
dev_utils = [
    "kiara_plugin.core_types",
    "kiara_plugin.develop",
    "build",
    "ipython",
    "just-bin; sys_platform != 'win32'",
    "mypy>=1.13.0",
    "pandas-stubs",
    "pdoc",
    "pre-commit>=4.0.0",
    "pytest>=6.2.2",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.2.1",
    "ruff>=0.4.1",
    "types-Deprecated",
    "types-PyYAML",
    "types-setuptools",
    "types-python-dateutil",
    "types-pytz",
    "types-tzlocal",
    "types-orjson",
    "types-Pygments",
    "types-Markdown",
    "types-humanfriendly",
    "types-colorama",
    "types-decorator",
    "types-pexpect",
    "types-networkx",
    "sqlalchemy-stubs",
    "watchdog",
    "wheel"
]

jupyter = [
    "jupyterlab",
    "ipydagred3"
]

marimo = [
    "marimo",
    "altair>=5.5.0,<6.0.0",
]

[project.urls]
homepage = "https://github.com/DHARPA-Project/kiara"
documentation = "https://dharpa.org/kiara.documentation"
repository = "https://github.com/DHARPA-Project/kiara"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/kiara/version.txt"

[tool.hatch.build.targets.wheel]
packages = ["src/kiara"]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
addopts = "--verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["kiara"]
omit = [
    "src/kiara/doc/*"
]
relative_files = true

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
    "if kiara is None:"
]

[tool.ruff]
line-length = 88

src = ["src", "tests"]

fix = true

#fixable = ["E", "F", "RUF100", "I001"]
# Enable Pyflakes `E` and `F` codes by default.

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pixi",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "external",
    "node_modules",
    "venv",
    "examples/",
    "dev/",
    "docs/"
]

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["E", "F", "RUF100", "I001", "Q", "D"]
select = [
    "D",
    "E",
    "F",
    "RUF",
    "I001",
    "YTT",
    "S",
    "C4",
    "T10",
    "ISC",
    "ICN",
    "T20",
    "Q",
    "TID",
    "PD",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PIE",
]

ignore = ["E501", "S101", "SIM118", "SIM108", "PLR2004", "PLR0913", "S110", "PIE810", "PLR0911", "PLR0915", "PLR0912", "D", "D401", "PLW0603", "PLR5501", "PLW2901", "S603", "S608", "ISC001", "PLC0206", "RUF022", "PLC0415", "RUF005"]
per-file-ignores = { }


[tool.ruff.lint.isort]
known-first-party = ["kiara", "kiara_plugin"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = false
plugins = [
    "pydantic.mypy"
]


# mypy per-module options:
[[tool.mypy.overrides]]
module = [
    "airium.*",
    "alembic.*",
    "appdirs",
    "asciinet.*",
    "black",
    "boltons.*",
    "click",
    "copier.*",
    "deepdiff",
    "devtools",
    "distro",
    "dpath.*",
    "docstring_parser.*",
    "fastapi.*",
    "fasteners.*",
    "filetype",
    "httpx.*",
    "humanfriendly",
    "hypercorn.*",
    "ipydagred3",
    "jinja2",
    "kiara_modules.*",
    "kiara_streamlit.*",
    "kiara.doc.mkdocstrings.handler.*",
    "icecream.*",
    "IPython.*",
    "importlib_metadata.*",
    "importlib_resources.*",
    "jupytext",
    "lz4.*",
    "mmh3",
    "pickle5",
    "pip.*",
    "pp",
    "mkdocstrings.*",
    "mkdocs.*",
    "mkdocs_gen_files.*",
    "mistune",
    "networkx",
    "orjson.*",
    "patoolib.*",
    "pkg_resources.*",
    "pyarrow.*",
    "pygraphviz",
    "regex.*",
    "structlog",
    "rich_click.*",
    "ruamel.*",
    "sortedcontainers",
    "stevedore",
    "streamlit.*",
    "textual.*",
    "uvloop",
    "uvicorn",
    "zstandard"
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "Linux"

include = ["src"]
exclude = ["**/__pycache__"]
ignore = []

reportMissingImports = false
reportMissingTypeStubs = false

executionEnvironments = [
]

[tool.pixi.project]
channels = ["dharpa", "conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
kiara  = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
#dev = { features = ["dev_utils"], solve-group = "default" }


[tool.pixi.tasks]
pre-commit-check = "pre-commit run --all-files"
tests = "py.test"
mypy = "mypy  --namespace-packages --explicit-package-base src/kiara_plugin/{{ cookiecutter.project_slug }}"
kiara = "kiara"
show-versions = "kiara --version"
delete-context = "kiara context delete"
install-dev-dependencies = "pip install --upgrade -e '.[dev_utils]'"
